fix(styles/foundation/_variables.scss): adjust color values for better contrast

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -70,7 +70,6 @@ h4 {
 
 h1 {
 	font-size: 2em;
-	margin-block-start: 0;
 }
 
 address {
@@ -80,14 +79,10 @@ address {
 a {
 	color: var(--c-secondary);
 
-	@media (hover: hover) {
+
+	@media (hover) {
 		&:hover {
-			text-decoration: none;
-			background-color: var(--bluegrey-40);
-			color: var(--bluegrey-90);
-			transition:
-				color 0.2s ease-in-out,
-				background-color 0.2s ease-in-out;
+			text-decoration-color: transparent;
 		}
 	}
 
